force-app/main/default/objects/Job_Position__c/Job_Position__c.object-meta.xml
<CustomObject>
    <description>Tracks open job positions including headcount, budget, hiring manager, and application roll-ups for the recruitment lifecycle.</description>
    <label>Job Position</label>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>