force-app/main/default/objects/Job_Position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Positions</relationshipName>
    <type>Lookup</type>
    <inlineHelpText>User responsible for approving candidates for this role</inlineHelpText>
</CustomField>