force-app/main/default/objects/Job_Position__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <inlineHelpText>Full JD including responsibilities, requirements, and perks</inlineHelpText>
</CustomField>