force-app/main/default/objects/Job_Position__c/fields/Max_Budget__c.field-meta.xml
<CustomField>
    <fullName>Max_Budget__c</fullName>
    <label>Max Budget (LPA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <inlineHelpText>Maximum salary approved for this position (used in scoring formula)</inlineHelpText>
</CustomField>