force-app/main/default/objects/Job_Position__c/fields/Min_Experience__c.field-meta.xml
<CustomField>
    <fullName>Min_Experience__c</fullName>
    <label>Min Experience (Yrs)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Minimum years of experience required for this role</inlineHelpText>
</CustomField>