force-app/main/default/objects/Job_Position__c/fields/Openings__c.field-meta.xml
<CustomField>
    <fullName>Openings__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Openings</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Total headcount to fill. Minimum: 1</inlineHelpText>
</CustomField>