force-app/main/default/objects/Job_Position__c/fields/Rejected_Applications__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Applications__c</fullName>
    <label>Rejected Applications</label>
    <summarizedField>Application__c.Id</summarizedField>
    <summaryFilterItems>
        <field>Application__c.Stage__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Job_Position__c</summaryForeignKey>
    <summaryOperation>Count</summaryOperation>
    <type>Summary</type>
    <inlineHelpText>Auto-count of applications marked as rejected</inlineHelpText>
</CustomField>