force-app/main/default/objects/Job_Position__c/fields/Selected_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Selected_Candidates__c</fullName>
    <label>Hired Candidates</label>
    <summaryFilterItems>
        <field>Application__c.Stage__c</field>
        <operation>equals</operation>
        <value>Hired</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Job_Position__c</summaryForeignKey>
    <summaryOperation>Count</summaryOperation>
    <type>Summary</type>
    <inlineHelpText>Auto-count of applications where candidate was hired</inlineHelpText>
</CustomField>