force-app/main/default/objects/Job_Position__c/fields/Total_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_Applications__c</fullName>
    <label>Total Applications</label>
    <summaryForeignKey>Application__c.Job_Position__c</summaryForeignKey>
    <summaryOperation>Count</summaryOperation>
    <type>Summary</type>
    <inlineHelpText>Auto-count of all applications linked to this position</inlineHelpText>
</CustomField>